# KataGo

./: Dockerfile
.github/workflows/: docker-image.yml
cpp/: CMakeLists.txt  analyze.py  compile.sh  hist.txt  log.txt  main.cpp  main.h  match.cfg  run.sh
cpp/command/: runtests.cpp
cpp/configs/: analysis_example.cfg
cpp/core/: hash.h
cpp/dataio/: sgf.cpp  sgf.h
cpp/game/: board.cpp  board.h  boardhistory.cpp  boardhistory.h
cpp/memory/: aggregator.h  memory.cpp  memory_entry.cpp  utils.cpp  utils.h
cpp/neuralnet/: cudabackend.cpp  nneval.cpp  nneval.h  nninputs.cpp  nninputs.h  nninterface.h  openclbackend.cpp
cpp/program/: play.cpp  setup.cpp
cpp/search/: search.cpp  search.h  searchparams.cpp  searchparams.h  searchresults.cpp
cpp/search/DyMeNNS/: memory.cpp  memory.h  node.cpp  node.h  utils.cpp  utils.h
cpp/search/FeatureHashing/: CMakeLists.txt  FeatureHashing.cpp  FeatureHashing.h  MurmurHash3.cpp  README.md  a.out  clean.sh  utils.cpp  utils.h
cpp/search/FeatureHashing/smartgame/: SgHash.h  SgRandom.h  SgUctSearch.cpp  SgUctSearch.h  SgUctTree.h
cpp/search/memory/: aggregator.cpp  aggregator.h  main.cpp  memory.cpp  memory.h  memory_entry.cpp  memory_entry.h  utils.cpp  utils.h
cpp/test_kata/: base.cfg  base_orig.cfg  clean.sh  cleanall.sh  compile.sh  gomill.sh  gomill_default.ctl  hyperparameters.txt  mmcts_extra.cfg  mmcts_katago.sh  mmcts_katago_gomill.sh  orig_katago.sh  paramgen.py  run.sh  run1.sh  run2.sh  run_single.sh
cpp/test_kata/openings/: 1.sgf  2.sgf  3.sgf  4.sgf  5.sgf
cpp/tests/: tests.h  testsearch.cpp
(+7 files in other folders)
